--- a/StoreApp/MainWindow.xaml
+++ b/StoreApp/MainWindow.xaml
@@ -5,43 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StoreApp"
         mc:Ignorable="d"
-<<<<<<< HEAD
         Title="MainWindow" Height="450" Width="800" Background="Bisque">
-=======
-        Title="MainWindow" Height="450" Width="800" Background="BlanchedAlmond">
->>>>>>> bd9cd70fd31efc20f431790a32d76f35ccac70c6
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="7*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-<<<<<<< HEAD
-            <ColumnDefinition Width="4*"/>
-            <ColumnDefinition Width="1*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="4*"/>
-        </Grid.RowDefinitions>
-        <Button Grid.Column="1" Height="50" Width="100" FontSize="25" Background="AntiqueWhite">Insert</Button>
-        <Label FontSize="45" HorizontalAlignment="Center">OneSec Market</Label>
-        <WrapPanel Grid.Row="1"></WrapPanel>
-        <Label Grid.Row="1" Grid.Column="1" FontSize="15" HorizontalAlignment="Center">Categories</Label>
-        <WrapPanel Grid.Row="1" Grid.Column="1" Margin="0,30,0,0"></WrapPanel>
-=======
-            <ColumnDefinition Width="5*"/>
             <ColumnDefinition Width="10*"/>
-            <ColumnDefinition Width="20*"/>
+            <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
-        <Label FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Comic Sans Ms">Name :</Label>
-        <TextBox Width="180" Height="60" HorizontalAlignment="Left" Grid.Column="1" FontSize="30" FontFamily="Comic Sans Ms"></TextBox>
-        <Button Background="CornflowerBlue" Grid.ColumnSpan="2" Grid.Row="1" Height="70" Width="150" FontSize="30" FontFamily="Comic Sans Ms">Insert</Button>
-        <Button Background="CornflowerBlue" Grid.ColumnSpan="2" Grid.Row="2" Height="70" Width="150" FontSize="30" FontFamily="Comic Sans Ms">Update</Button>
-        <Button Background="CornflowerBlue" Grid.ColumnSpan="2" Grid.Row="3" Height="70" Width="150" FontSize="30" FontFamily="Comic Sans Ms">Select</Button>
-        <ListBox Grid.Column="2" Grid.RowSpan="4"></ListBox>
->>>>>>> bd9cd70fd31efc20f431790a32d76f35ccac70c6
+
+        <Label FontWeight="ExtraLight" FontFamily="Comic Sans Ms" FontSize="50" HorizontalAlignment="Center" Foreground="Chocolate">OneSec Market</Label>
+        <Button Background="Beige" FontWeight="ExtraLight" FontFamily="Comic Sans Ms" Command="{Binding InsertCommand}" Grid.Column="1" FontSize="30" Foreground="Chocolate">INSERT</Button>
+        <ScrollViewer Grid.Row="1">
+            <WrapPanel Name="Panel"></WrapPanel>
+        </ScrollViewer>
+        <Label Grid.Row="1" Grid.Column="1" FontSize="20" Foreground="Chocolate">Categories</Label>
+        <WrapPanel Name="CategoriesWrap" Grid.Row="1" Grid.Column="1" Margin="0,35,0,0"></WrapPanel>
     </Grid>
 </Window>
